# co-match.noir

./: README.md
.github/workflows/: deploy.yaml
circuit/: Nargo.toml  Prover.toml
circuit/src/: location.nr  main.nr  structs.nr
mpc-server/: .gitignore  Cargo.toml  certs.sh  config.sh
mpc-server/data/: circuit.json
mpc-server/src/: db.rs  main.rs  matching.rs  shares.rs  token.rs
mpc-server/src/shares/: split.rs
web-app/: .gitignore  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  vercel.json
web-app/api/: split.rs
web-app/data/: circuit.json
web-app/src-rs/: lib.rs
web-app/src/pages/: Matches.tsx  Preferences.tsx  Shares.tsx  api.tsx  index.tsx
web-app/src/styles/: globals.css
