[package]
name = "mpc-server"
version = "0.1.0"
edition = "2024"
default-run = "mpc-server"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.3"
rustls = "0.23.15"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3"
rcgen = "0.13"
rand = "0.8.5"
bincode = "1.3.3"
ark-bn254 = "^0.5.0"

# co-noir = { git = "https://github.com/TaceoLabs/co-snarks", rev = "b294667" }
co-noir = { path = "../../conoir-experiments/co-snarks/co-noir/co-noir" }
co-ultrahonk = { path = "../../conoir-experiments/co-snarks/co-noir/co-ultrahonk" }
noirc-artifacts = { version = "1.0.0-beta.4", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.4", package = "noirc_artifacts" }
futures = "0.3.31"
