[package]
name = "mpc-server"
version = "0.1.0"
edition = "2024"
authors = ["teddav"]
default-run = "mpc-server"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.3"
rustls = "0.23.15"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3"
rcgen = "0.13"
rand = "0.8.5"
bincode = "1.3.3"
ark-bn254 = "^0.5.0"

# co-noir = { git = "https://github.com/TaceoLabs/co-snarks", rev = "b294667" }
# co-noir = { path = "../../conoir-experiments/co-snarks/co-noir/co-noir" }
# co-ultrahonk = { path = "../../conoir-experiments/co-snarks/co-noir/co-ultrahonk" }
co-noir = { git = "https://github.com/teddav/co-snarks", rev = "0ebb0a1" }
co-ultrahonk = { git = "https://github.com/teddav/co-snarks", rev = "0ebb0a1" }
noirc-artifacts = { version = "1.0.0-beta.4", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.4", package = "noirc_artifacts" }
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.44.2", features = ["full"] }
once_cell = "1.21.3"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenv = "0.15.0"
toml = "0.8.22"
hex = "0.4.3"
